--- a/Logistic_Regression.html
+++ b/Logistic_Regression.html
@@ -283,37 +283,37 @@ variables age &amp; sex reveal that:
 <tr class="odd">
 <td align="left">age_cat</td>
 <td align="center">Age group of study subject</td>
-<td align="right">Numeric: 0, 5, 10, …65+</td>
+<td align="right">Character: age cagetories</td>
 </tr>
 <tr class="even">
 <td align="left">sex</td>
 <td align="center">Sex of study subject</td>
-<td align="right">Numeric: 0,1</td>
+<td align="right">Character: female, male</td>
 </tr>
 <tr class="odd">
 <td align="left">pregnant</td>
 <td align="center">Study subject was pregnant</td>
-<td align="right">Numeric: 0,1</td>
+<td align="right">Character: yes, no</td>
 </tr>
 <tr class="even">
 <td align="left">season</td>
 <td align="center">Season person was interviewed</td>
-<td align="right">Numeric: 1-4</td>
+<td align="right">Character</td>
 </tr>
 <tr class="odd">
 <td align="left">diabetes</td>
 <td align="center">Study subject had diabetes</td>
-<td align="right">Numeric: 0,1</td>
+<td align="right">Character: yes, no</td>
 </tr>
 <tr class="even">
 <td align="left">asthma</td>
 <td align="center">Study subject had asthma</td>
-<td align="right">Numeric: 0, 1</td>
+<td align="right">Character: yes, no</td>
 </tr>
 <tr class="odd">
 <td align="left">immunocompromised</td>
 <td align="center">Study subject was immunocompromised</td>
-<td align="right">Numeric: 0, 1</td>
+<td align="right">Character: yes, no</td>
 </tr>
 <tr class="even">
 <td align="left">household_size</td>
@@ -323,27 +323,27 @@ variables age &amp; sex reveal that:
 <tr class="odd">
 <td align="left">travel</td>
 <td align="center">Study subject travelled prior to illness</td>
-<td align="right">Numeric: 0, 1</td>
+<td align="right">Character: yes, no</td>
 </tr>
 <tr class="even">
 <td align="left">location</td>
 <td align="center">Location of home</td>
-<td align="right">Numeric: 1-4</td>
+<td align="right">Character</td>
 </tr>
 <tr class="odd">
 <td align="left">LOTE</td>
 <td align="center">Language other than English spoken at home</td>
-<td align="right">Numeric: 0, 1</td>
+<td align="right">Character: yes, no</td>
 </tr>
 <tr class="even">
 <td align="left">ATSI</td>
 <td align="center">Study subject is Aboriginal/Torres Strait Islander</td>
-<td align="right">Numeric: 0, 1</td>
+<td align="right">Character: yes, no</td>
 </tr>
 <tr class="odd">
 <td align="left">state_r</td>
 <td align="center">State of residence</td>
-<td align="right">Numeric:1-7</td>
+<td align="right">Character</td>
 </tr>
 <tr class="even">
 <td align="left">month</td>
@@ -416,7 +416,7 @@ summary(a)
 
 # Step 4: 
 exp(cbind(&quot;Odds ratio&quot; = coef(a), confint.default(a, level = 0.95)))</code></pre>
-<p>In this instance where we have only one independent variable, the equation looks like:</p>
+<p>In this instance where we have only one independent variable, the logistic regression equation looks like:</p>
 <p><span class="math display">\[\hat{g}{(x)}=log\frac{p}{(1-p)}=\beta_0+\beta_1x_1\]</span></p>
 <p>We need to exponentiate the results to provide us with an odds ratio for the association between ARI and diabetes. As you can see, the odds ratio was identical to that which we calculated by hand.</p>
 <p><strong>Task 3:</strong> Is diabetes associated with ARI? What about asthma?</p>
@@ -491,7 +491,7 @@ table(utri$ARI,utri$rural)
 <p>In this exercise, we are going to purposefully select covariates for inclusion in our logistic regression model. This involves the following steps:</p>
 <ol style="list-style-type: decimal">
 <li><p>Careful univariable analysis to identify candidates, with p&gt;0.25 as a screening level, for multivariable analysis.</p></li>
-<li><p>Fit the multivariable model using variables decided at step 1. Following this, assess the importance of each variable using p values at traditional levels of significance. Drop variable from the model that do not meet p value cut-offs.</p></li>
+<li><p>Fit the multivariable model using variables decided at step 1. Following this, assess the importance of each variable using p values at traditional levels of significance. Drop variables from the model that do not meet p value cut-offs.</p></li>
 <li><p>Compare the reduced model to the original model using a likelihood ratio test and assess the change in coefficients.</p></li>
 <li><p>Check for interactions in the main effects model.</p></li>
 <li><p>Check the adequacy and fit of the model.</p></li>
@@ -567,9 +567,7 @@ auc(g)</code></pre>
 <li>&lt;0.6—No or poor discrimination</li>
 <li>0.7-0.8—Acceptable discrimination</li>
 <li>0.8-0.9—Excellent discrimination</li>
-<li><blockquote>
-<p>0.9—Outstanding discrimination</p>
-</blockquote></li>
+<li><span class="math inline">\(&gt;\)</span> 0.9—Outstanding discrimination</li>
 </ul>
 <p><strong>Discuss the results of the goodness of fit tests. What do you think of the performance of the main effects model now?</strong></p>
 <pre><code>The Hosmer Lemeshow test indicates that the model is a good fit for the observed data. In terms of accurately 
